Fix spacing around search bar

--- a/app/assets/stylesheets/components/greeting.scss
+++ b/app/assets/stylesheets/components/greeting.scss
@@ -23,7 +23,7 @@
 .header-fixed form {
   flex-direction: row;
   width: 500px;
-  margin: 0 100px;
+  margin: 0 50px;
 }
 
 .header-fixed form input {
